Updated Work Experience section with new idea. Not complete

--- a/cv.tex
+++ b/cv.tex
@@ -101,48 +101,135 @@ Rasmus excels at planning and organizing his surroundings and because of that he
 coordinate others, something he does well. However, as a personality trait Rasmus believes that a person never can be
 completely perfect, as a results he always aims to improve himself by an iterative process where he reflects on his own
 actions and the actions of others. By combining his skill in organization with self evaluation he tries to identify and
-prevent pitfalls and problems before they occur
+prevent pitfalls and problems before they occur.
 
 %%%
-\section{Competences (5-1)}
+\section{Competences)}
+Expert Knowledge(5), Advanced Knowledge(4), Intermediate Knowledge(3), Basic Knowledge(2), Beginners Knowledge(1)
+
 \begin{tabular}{rl}
-Expert Knowledge(5):    & \\
-Advanced Knowledge(4):& C++, Git, Game Development, Windows\\
-Intermediate Knowledge(3):& Linux, Agile Development, SQL, IA-32, Gradle, CMake, Android, Threading,  DirectX, \\& Memory Management, Java, Bash, Jenkins\\
-Basic Knowledge(2):& Unix, C, X86-64, HLSL, GPGPU, Javascript, Unity3D, Spring, HTML, CSS,\\& Scala, Lint, Make, Maven, Mockito, LUA, REST,  \\
-Beginners Knowledge(1):& Python3, PHP, C\#, Groovy, Lua, Mockito, Doxygen, Confluence, 3DS Studio Max,\\&
-MQTT \\
+Programming languages:&
+C++(4),
+Assembler (IA-32)(3),
+C(3),
+C\#(3),
+HLSL(3),
+Java(3),
+LateX(3),
+SQL(3),
+XML(3),
+HTML(2),\\&
+Javascript(2),
+LUA(2),
+PHP(2),
+Python(2),
+Scala(2),
+Matlab(1),
+YAML(1)\\
+
+Development Tools:&
+CMake(4),
+Bash(3),
+CLion(3),
+Gerrit(3),
+Gradle(3),
+IntelliJ(3),
+Jenkins(3),
+Jira(3),
+Visual Studio(3),\\&
+Tomcat(3),
+Unity3D(3),
+Apache(2),
+Clang(2),
+Eclipse(2),
+GNU toolchain(2),
+JBoss(2),
+Vagrant(2),\\&
+Windows Batch Script(2),
+Confluence(1),
+Lint(1),
+Maven(1),
+Powershell(1)\\
+
+Libs and Platforms:&
+Android SDK(3),
+DirectX(3),
+Google Test(3),
+POSIX Threads(3),
+STL(3),
+Android NDK(2),
+Boost(2),\\&
+Mockito(2),
+MPI(2),
+OpenGL(2),
+SDL(2),
+Spring(2),
+Angular(1),
+Google Mock(1),
+NodeJS(1),\\&
+Wordpress(1)\\
+
+Operating System:&
+Linux(4),
+Windows(4),
+Unix(2),
+Mac OS X(1)\\
+
+Development Methods:&
+Agile(3),
+Scrum(3),
+Kanban(2),
+TDD(2),
+CI(2),
+Lean(1)\\
+
+Databases:&
+MySQL(3),
+SQlite(2)\\
+
+Version Control:&
+Git(4),
+svn(1)\\
+
+Protocols and Formats:&
+MQTT(2),
+REST(2)\\
+
+Other software:&
+SSH(3),
+cURL(2),
+Office Word(2)\\
 \end{tabular}
 
 %%%
 \section{Work experience}
-\subsection{Employments}
 
-\textbf{Consulting Software Engineer} 2016-04-01 - Present \\
+\textbf{Consulting Software Engineer} 2017-02 - Present \\
 \begin{tabular}{rl}
-Empoyer:& HiQ Karlskrona AB\\
-Client:& Ericsson  \\
+Employer:& ICTech\\
+Assignment:& CPAC AB (2017-02 - 2017-06)
+\end{tabular}\\
+
+\textbf{Consulting Software Engineer} 2014-09 - 2017-01 \\
+\begin{tabular}{rl}
+Employer:& HiQ Karlskrona AB\\
+(2016-04 - 2014-01):& Ericsson AB at 100\%. Rasmus were assigned multiple PoC projects and helped to create and stabilize\\& new teams as a scrummaster, lead developer, mentor, or teamleader, depending on the requirements\\& of the team. \\
+(2014-09 - 2014-12):& Ericsson AB at 100\% which started as a summer intership but was continued. Rasmus had the role\\& as developer first 2-3 months but stepped up as scrummaster and teamleader after that. \\
+(2014-09 - 2014-12):& Ericsson AB at 25\% with two other students where Rasmus found him self in the role as teamleader.\\
+
 \end{tabular}\\
 
 %%%
 \section{Education}
-\textbf{Blekinge Institute of Technology} 2010-09-01 - 2016-03-31 \\
+\textbf{Blekinge Institute of Technology} 2010-09-01 - 2016-03-31\\
 \begin{tabular}{rl}
 Degree:&  Master of Engineering Science in Game and Software Engineering\\
 Thesis:& Combining Regional Time Stepping With Two-Scale PCISPH Method\\
-Notable project:& During a 20 week long project, where I acted as scrummaster, we were tasked with building a game\\& engine and associated game from scratch in C++ using DirectX, PhysX, FMod, SDL and Winsock.
+Notable project:& During a 20 week long project, where I acted as scrummaster, we were tasked to build  a game engine\\& and associated game from scratch in C++ using DirectX, PhysX, FMod, SDL and Winsock.
 \end{tabular}\\
 
 %%%
 \section{Interests}
-During his spare time Rasmus enjoys to use the computer for computer games,
-researching and testing new libraries, tools, frameworks, and languages. He also
-appreciates gamejams whenever possible and occasionally spends his time on a wargame.
-A special interest for Rasmus is C++ and keeping up to date with new techniques and
-changes for the language.
-
-Outside the digital world Rasmus enjoy cooking, magic the gathering, craft beer, and
-traveling. He is currently casually looking into the craftsmanship of wood carving as a
-hobby
+During his spare time Rasmus enjoys to use the computer for computer games, researching and testing new libraries, tools, frameworks, and languages. He also appreciates gamejams whenever possible and occasionally spends his time on a wargame. A special interest for Rasmus is C++ and keeping up to date with new techniques and changes for the language. Outside the digital world Rasmus enjoy cooking, magic the gathering, craft beer, and traveling. He is currently casually looking into the craftsmanship of wood carving as a hobby.
 
 \end{document}
