--- a/cv.tex
+++ b/cv.tex
@@ -18,16 +18,16 @@
 
 %% Page sizes
 \setlength{\textwidth}{0.92\paperwidth}
-\setlength{\textheight}{720pt}
+\setlength{\textheight}{800pt}
 \setlength{\hoffset}{-70pt}
 \setlength{\voffset}{-50pt}
 
-%% Change subscection macro
-\renewcommand\thesubsection{}
+%Tweak a bit the top margin
+%\addtolength{\voffset}{-1.3cm}
 
 %% Fonts
 \defaultfontfeatures{Mapping=tex-text}
-%%% modified for Karol Kozioł for ShareLaTeX use
+%%% modified for Karol Kozioł for ShareLaTeX use.
 \setmainfont[
     SmallCapsFont = Fontin-SmallCaps.otf,
     BoldFont = Fontin-Bold.otf,
@@ -39,9 +39,6 @@
 %http://stefano.italians.nl/archives/26
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
 \titlespacing{\section}{0pt}{3pt}{3pt}
-
-%Tweak a bit the top margin
-%\addtolength{\voffset}{-1.3cm}
 
 %Italian hyphenation for the word: ''corporations''
 \hyphenation{im-pre-se}
@@ -65,15 +62,14 @@
 
 %--------------------TITLE-------------
 \par{	
-    
-    \begin{wrapfigure}{!tr}{0.20\textwidth}
-    \includegraphics[scale=0.04]{Grayscale.pdf}
+    \begin{wrapfigure}{!tr}{0.20\paperwidth}
+    \includegraphics[scale=0.10]{rt050.png}
     \end{wrapfigure}
     
-    %\Huge Rasmus \textsc{Tilljander}
-    \Huge Consultant Profile
+    \Huge Rasmus \textsc{Tilljander}
+    %\Huge Consultant Profile
     
-	\bigskip
+	%\bigskip
 \par}
 
 %--------------------SECTIONS-----------------------------------
@@ -85,35 +81,30 @@
     \textsc{Citizenship:}   &   Swedish \\ 
 %    \textsc{Address:}   & Valhallavägen 4B, 37140 , Karlskrona, Sweden \\
     \textsc{Languages:}  & Swedish (Native), English (Fluent) \\
-    \textsc{Contact:}   & 07xx-xxxxx \\
-%    \textsc{Phone:}     & +46 76 00 66 242\\
-%    \textsc{email:}     & tilljander.rasmus@gmail.com\\
-%    \textsc{Github:}  & \url{https://github.com/Meraz}\\
-%    \textsc{linkedin:}  & \url{https://se.linkedin.com/in/rasmus-tilljander-62830052}
+%    \textsc{Contact:}   & 07xx-xxxxx \\
+    \textsc{Phone:}     & +46 (0)76 0066242\\
+    \textsc{email:}     & tilljander.rasmus@gmail.com\\
+    \textsc{Github:}  & \url{https://github.com/Meraz}\\
+    \textsc{linkedin:}  & \url{https://se.linkedin.com/in/rasmus-tilljander-62830052}
 \end{tabular}
 
 %%%
 \section{Summary}
-Rasmus is a student of knowledge with genuine curiosity regarding the essential workings of the world. With an open mind he adopts the philosophy that one can always improve oneself and that each day contains opportunities that has to be seized. Due to the characteristic of software development it demands a mix of social, logical, and artistic aspects in order to excel
-in. This is why Rasmus has chosen software development as his primary field of interest. As a natural approach he chose an academic road which had a low-level foundation in terms of programming but still explored areas such as visualisation and UX. Which is why C/C++ augmented with higher lever languages is the tools of his choice.
+Rasmus is a student of knowledge with genuine curiosity regarding the essential workings of the world. With an open mind he adopts the philosophy that one can always improve oneself and that each day contains opportunities that has to be seized. Due to the characteristic of software development it demands a mix of social, logical, and artistic aspects in order to excel in. This is why Rasmus has chosen software development as his primary field of interest. As a natural approach he chose an academic road which had a low-level foundation in terms of programming but still explored areas such as visualisation and UX. Which is why C/C++ augmented with higher lever languages is the tools of his choice.
 
-Rasmus excels at planning and organizing his surroundings and because of that he often finds himself in a position to
-coordinate others, something he does well. However, as a personality trait Rasmus believes that a person never can be
-completely perfect, as a results he always aims to improve himself by an iterative process where he reflects on his own
-actions and the actions of others. By combining his skill in organization with self evaluation he tries to identify and
-prevent pitfalls and problems before they occur.
+Rasmus excels at planning and organizing his surroundings and because of that he often finds himself in a position to coordinate others, something he does well. However, as a personality trait Rasmus believes that a person never can be completely perfect, as a results he always aims to improve himself by an iterative process where he reflects on his own actions and the actions of others. By combining his skill in organization with self evaluation he tries to identify and prevent pitfalls and problems before they occur.
 
 %%%
-\section{Competences)}
+\section{Competences}
 Expert Knowledge(5), Advanced Knowledge(4), Intermediate Knowledge(3), Basic Knowledge(2), Beginners Knowledge(1)
 
 \begin{tabular}{rl}
 Programming languages:&
 C++(4),
-Assembler (IA-32)(3),
 C(3),
 C\#(3),
 HLSL(3),
+IA-32 Assembler(3),
 Java(3),
 LateX(3),
 SQL(3),
@@ -124,7 +115,6 @@ LUA(2),
 PHP(2),
 Python(2),
 Scala(2),
-Matlab(1),
 YAML(1)\\
 
 Development Tools:&
@@ -147,7 +137,6 @@ JBoss(2),
 Vagrant(2),\\&
 Windows Batch Script(2),
 Confluence(1),
-Lint(1),
 Maven(1),
 Powershell(1)\\
 
@@ -169,7 +158,7 @@ Google Mock(1),
 NodeJS(1),\\&
 Wordpress(1)\\
 
-Operating System:&
+Operating Systems:&
 Linux(4),
 Windows(4),
 Unix(2),
@@ -195,38 +184,39 @@ Protocols and Formats:&
 MQTT(2),
 REST(2)\\
 
-Other software:&
-SSH(3),
-cURL(2),
-Office Word(2)\\
 \end{tabular}
 
 %%%
 \section{Work experience}
 
-\textbf{Consulting Software Engineer} 2017-02 - Present \\
+\textbf{Consulting Software Engineer} 2017-02 - Present (Göteborg) \\
 \begin{tabular}{rl}
-Employer:& ICTech\\
-Assignment:& CPAC AB (2017-02 - 2017-06)
-\end{tabular}\\
+Employer& ICTech\\
+2017-02 - 2017-06& CPAC AB at fulltime. As a part of a team of eight Rasmus was responsible for everything in the\\& project connected to Unity3D.  This included designing, implementing, correcting bugs, and building\\& the binaries for releases. Some tasks also included C\#, Java/Android connection.\\
+Mentionables& Windows, C\#, Bash, Git, Unity3D, Jenkins, Java, Android
+\end{tabular}
 
-\textbf{Consulting Software Engineer} 2014-09 - 2017-01 \\
+\textbf{Consulting Software Engineer} 2014-09 - 2017-01 (Karlskrona) \\
 \begin{tabular}{rl}
-Employer:& HiQ Karlskrona AB\\
-(2016-04 - 2014-01):& Ericsson AB at 100\%. Rasmus were assigned multiple PoC projects and helped to create and stabilize\\& new teams as a scrummaster, lead developer, mentor, or teamleader, depending on the requirements\\& of the team. \\
-(2014-09 - 2014-12):& Ericsson AB at 100\% which started as a summer intership but was continued. Rasmus had the role\\& as developer first 2-3 months but stepped up as scrummaster and teamleader after that. \\
-(2014-09 - 2014-12):& Ericsson AB at 25\% with two other students where Rasmus found him self in the role as teamleader.\\
+Employer& HiQ Karlskrona AB\\
+2016-04 - 2014-01& Ericsson AB at fulltime. Rasmus were assigned to various PoC projects and helped to create and\\& stabilize new teams as a scrummaster, lead developer, mentor, or teamleader, depending on the\\& requirements of the team. \\
+Mentionables& C++14, CMake, Java8, Gradle, Ubuntu, Bash, Git, MQTT, REST, CLion, IntelliJ, Scrum.\\\\
 
-\end{tabular}\\
+2015-06 - 2015-10&Ericsson AB at 100\% which started as a summer intership but was continued. Rasmus had the role\\& as developer first 2 months but stepped up as scrummaster and teamleader after that. \\
+Mentionables& Ubuntu, Java8, Vaadin, SQL, Spring, REST, Cloudify, Git, Gradle, Bash, Scrum.\\\\
+
+2014-09 - 2014-12& Ericsson AB at 25\% with two other students where Rasmus were assigned the role as teamleader.\\
+Mentionables& Unix, Scala, Java, Git, Bash, Gradle, Eclipse.
+\end{tabular}
 
 %%%
 \section{Education}
-\textbf{Blekinge Institute of Technology} 2010-09-01 - 2016-03-31\\
+\textbf{Blekinge Institute of Technology} 2010-09-01 - 2016-03-31 \\
 \begin{tabular}{rl}
-Degree:&  Master of Engineering Science in Game and Software Engineering\\
-Thesis:& Combining Regional Time Stepping With Two-Scale PCISPH Method\\
-Notable project:& During a 20 week long project, where I acted as scrummaster, we were tasked to build  a game engine\\& and associated game from scratch in C++ using DirectX, PhysX, FMod, SDL and Winsock.
-\end{tabular}\\
+Degree&  Master of Engineering Science in Game and Software Engineering\\
+Thesis& Combining Regional Time Stepping With Two-Scale PCISPH Method\\
+Notable project& During a 20 week long project, where Rasmus acted  as scrummaster, we were tasked to build a game\\& engine and associated game from scratch in C++ using DirectX, PhysX, FMod, SDL and Winsock.
+\end{tabular}
 
 %%%
 \section{Interests}
