--- a/cv.tex
+++ b/cv.tex
@@ -1,8 +1,8 @@
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper, 11pt]{article}
 %A Few Useful Packages
 \usepackage{marvosym}
 \usepackage{fontspec} 					%for loading fonts
-\usepackage{xunicode,xltxtra,url,parskip} 	%other packages for formatting
+\usepackage{xunicode, xltxtra, url, parskip} 	%other packages for formatting
 \RequirePackage{color,graphicx}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[big]{layaureo} 				%better formatting of the A4 page
@@ -13,27 +13,34 @@
 \usepackage{hyperref}
 \usepackage{wrapfig}
 \usepackage[export]{adjustbox}
-\definecolor{linkcolour}{rgb}{0,0.2,0.6}
-\hypersetup{colorlinks,breaklinks,urlcolor=linkcolour, linkcolor=linkcolour}
+\definecolor{linkcolour}{rgb}{0, 0.2, 0.6}
+\hypersetup{colorlinks, breaklinks, urlcolor=linkcolour, linkcolor=linkcolour}
 
 %% Page sizes
 \setlength{\textwidth}{0.92\paperwidth}
 \setlength{\textheight}{800pt}
-\setlength{\hoffset}{-70pt}
-\setlength{\voffset}{-50pt}
+\setlength{\hoffset}{-57pt}
+\setlength{\voffset}{-35pt}
 
 %Tweak a bit the top margin
 %\addtolength{\voffset}{-1.3cm}
 
 %% Fonts
 \defaultfontfeatures{Mapping=tex-text}
-%%% modified for Karol Kozioł for ShareLaTeX use.
+%% modified for Karol Kozioł for ShareLaTeX use.
+%\setmainfont[
+%    SmallCapsFont = Fontin-SmallCaps.otf,
+%    BoldFont = Fontin-Bold.otf,
+%    ItalicFont = Fontin-Italic.otf
+%]
+%{Fontin.otf}
+
 \setmainfont[
-    SmallCapsFont = Fontin-SmallCaps.otf,
-    BoldFont = Fontin-Bold.otf,
-    ItalicFont = Fontin-Italic.otf
-]
-{Fontin.otf}
+    BoldItalicFont=calibriz.ttf,
+    BoldFont      =calibrib.ttf,
+    ItalicFont    =calibrii.ttf]
+    {calibri.ttf}
+\usepackage{fontspec}
 
 %CV Sections inspired by: 
 %http://stefano.italians.nl/archives/26
@@ -90,9 +97,11 @@
 
 %%%
 \section{Summary}
-Rasmus is a student of knowledge with genuine curiosity regarding the essential workings of the world. With an open mind he adopts the philosophy that one can always improve oneself and that each day contains opportunities that has to be seized. Due to the characteristic of software development it demands a mix of social, logical, and artistic aspects in order to excel in. This is why Rasmus has chosen software development as his primary field of interest. As a natural approach he chose an academic road which had a low-level foundation in terms of programming but still explored areas such as visualisation and UX. Which is why C/C++ augmented with higher lever languages is the tools of his choice.
+Rasmus is a student of knowledge with genuine curiosity regarding the essential workings of the world. With an open mind he adopts the philosophy that one can always improve oneself and that each day contains opportunities that has to be seized. As a natural approach to realize his goals he chose a path of low-level foundation but still explored areas such as visualisation and UX, which is why C/C++ augmented with higher lever languages are the tools of his choice.
 
-Rasmus excels at planning and organizing his surroundings and because of that he often finds himself in a position to coordinate others, something he does well. However, as a personality trait Rasmus believes that a person never can be completely perfect, as a results he always aims to improve himself by an iterative process where he reflects on his own actions and the actions of others. By combining his skill in organization with self evaluation he tries to identify and prevent pitfalls and problems before they occur.
+According to previous employers, Rasmus excels at planning and organizing his surroundings as well as other people. Furthermore, as a personality trait Rasmus believes that a person never can be completely perfect, as a results he always aims to improve himself by an iterative process where he reflects on his own actions and the actions of others. By combining his skill in organization with self evaluation he tries to identify and prevent pitfalls and problems before they occur.
+
+During his spare time Rasmus enjoys computer games, researching and testing new libraries, tools, frameworks, and languages. He also appreciates gamejams whenever possible and occasionally spends his time on a wargame. A special interest for Rasmus is C++ and keeping up to date with new techniques and changes for the language. Outside the digital world Rasmus enjoy cooking, magic the gathering, craft beer, and traveling.
 
 %%%
 \section{Competences}
@@ -108,8 +117,8 @@ IA-32 Assembler(3),
 Java(3),
 LateX(3),
 SQL(3),
-XML(3),
-HTML(2),\\&
+XML(3),\\&
+HTML(2),
 Javascript(2),
 LUA(2),
 PHP(2),
@@ -125,16 +134,15 @@ Gerrit(3),
 Gradle(3),
 IntelliJ(3),
 Jenkins(3),
-Jira(3),
-Visual Studio(3),\\&
+Jira(3),\\&
+Visual Studio(3),
 Tomcat(3),
 Unity3D(3),
-Apache(2),
 Clang(2),
 Eclipse(2),
-GNU toolchain(2),
+GNU toolchain(2),\\&
 JBoss(2),
-Vagrant(2),\\&
+Vagrant(2),
 Windows Batch Script(2),
 Confluence(1),
 Maven(1),
@@ -146,16 +154,16 @@ DirectX(3),
 Google Test(3),
 POSIX Threads(3),
 STL(3),
-Android NDK(2),
-Boost(2),\\&
+Android NDK(2),\\&
+Boost(2),
 Mockito(2),
 MPI(2),
 OpenGL(2),
 SDL(2),
 Spring(2),
 Angular(1),
-Google Mock(1),
-NodeJS(1),\\&
+Google Mock(1),\\&
+NodeJS(1),
 Wordpress(1)\\
 
 Operating Systems:&
@@ -189,20 +197,23 @@ REST(2)\\
 %%%
 \section{Work experience}
 
-\textbf{Consulting Software Engineer} 2017-02 - Present (Göteborg) \\
+\textbf{Consulting Software Engineer} 2017-02 - Current (Göteborg) \\
 \begin{tabular}{rl}
-Employer& ICTech\\
-2017-02 - 2017-06& CPAC AB at fulltime. As a part of a team of eight Rasmus was responsible for everything in the\\& project connected to Unity3D.  This included designing, implementing, correcting bugs, and building\\& the binaries for releases. Some tasks also included C\#, Java/Android connection.\\
+Employer& ICT i Göteborg AB (Ictech)\\
+2017-08 - Current& Ericsson AB Gothenburg.Rasmus works with Ericsson's Evolved Packet Core (EPC) solution. This\\& assignment includes designing new code as well as maintaining legacy code in a large codebase. \\
+Mentionables& C++(11), Linux,  Git, Gerrit, C, tcsh, Wireshark, CMake, Scrum   \\\\
+
+2017-02 - 2017-06& CPAC AB at fulltime. As a part of a team of eight Rasmus was responsible for everything in\\& the project connected to Unity3D.  This included designing, implementing, correcting bugs,\\& and building the binaries for releases. Some tasks also included C++, and/or C\#/Java/Android\\& connection.\\
 Mentionables& Windows, C\#, Bash, Git, Unity3D, Jenkins, Java, Android
 \end{tabular}
-
+\\\\\\
 \textbf{Consulting Software Engineer} 2014-09 - 2017-01 (Karlskrona) \\
 \begin{tabular}{rl}
 Employer& HiQ Karlskrona AB\\
-2016-04 - 2014-01& Ericsson AB at fulltime. Rasmus were assigned to various PoC projects and helped to create and\\& stabilize new teams as a scrummaster, lead developer, mentor, or teamleader, depending on the\\& requirements of the team. \\
+2016-04 - 2017-01& Ericsson AB at fulltime. Rasmus were assigned to various PoC projects and helped to create\\& and stabilize new teams as a scrummaster, lead developer, mentor, or teamleader, depending on\\& the requirements of the team. He was also responsible for the internal IT-systems at\\& HiQ Karlskrona during this time.\\
 Mentionables& C++14, CMake, Java8, Gradle, Ubuntu, Bash, Git, MQTT, REST, CLion, IntelliJ, Scrum.\\\\
 
-2015-06 - 2015-10&Ericsson AB at 100\% which started as a summer intership but was continued. Rasmus had the role\\& as developer first 2 months but stepped up as scrummaster and teamleader after that. \\
+2015-06 - 2015-10&Ericsson AB at 100\% which started as a summer intership but was continued. Rasmus had the\\& role as developer first 2 months but stepped up as scrummaster and teamleader after that. \\
 Mentionables& Ubuntu, Java8, Vaadin, SQL, Spring, REST, Cloudify, Git, Gradle, Bash, Scrum.\\\\
 
 2014-09 - 2014-12& Ericsson AB at 25\% with two other students where Rasmus were assigned the role as teamleader.\\
@@ -215,11 +226,7 @@ Mentionables& Unix, Scala, Java, Git, Bash, Gradle, Eclipse.
 \begin{tabular}{rl}
 Degree&  Master of Engineering Science in Game and Software Engineering\\
 Thesis& Combining Regional Time Stepping With Two-Scale PCISPH Method\\
-Notable project& During a 20 week long project, where Rasmus acted  as scrummaster, we were tasked to build a game\\& engine and associated game from scratch in C++ using DirectX, PhysX, FMod, SDL and Winsock.
+Notable project& During a 20 week long project, where Rasmus acted  as scrummaster, we were tasked to\\& build a game engine and associated game from scratch in C++ using DirectX, PhysX, FMod,\\& SDL and Winsock.
 \end{tabular}
-
-%%%
-\section{Interests}
-During his spare time Rasmus enjoys to use the computer for computer games, researching and testing new libraries, tools, frameworks, and languages. He also appreciates gamejams whenever possible and occasionally spends his time on a wargame. A special interest for Rasmus is C++ and keeping up to date with new techniques and changes for the language. Outside the digital world Rasmus enjoy cooking, magic the gathering, craft beer, and traveling. He is currently casually looking into the craftsmanship of wood carving as a hobby.
 
 \end{document}
